<resources>
    <string name="app_name">ProjetoProgramacaoAvancada</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Viagem">Viagem</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="lista_viagem">Lista Viagem</string>
    <string name="criar_lista_viagem">Criar Lista Viagem</string>
    <string name="scoll">"scroll "</string>
    <string name="inserir">Inserir</string>
    <string name="edit">Edit</string>
    <string name="eliminar">eliminar</string>
    <string name="eletr_nicos">Eletrónicos</string>
    <string name="higiene">Higiene</string>
    <string name="acess_rios">Acessórios</string>
    <string name="roupas">Roupas</string>
    <string name="cal_ado">Calçado</string>
    <string name="lista_de_viagem">Lista de Viagem</string>
    <string name="name">Name</string>
    <string name="guardar">guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="eletronicos">Eletronicos</string>
    <string name="class_viagem">Class Viagem</string>
    <string name="info_class">Info Class</string>
    <string name="local_origem">Local Origem</string>
    <string name="data_inicio">Data Inicio</string>
    <string name="data_final">Data Final</string>
    <string name="acessorios">Acessórios</string>
    <string name="calcado">Calçado</string>
    <string name="passageiros">Passageiros</string>
    <string name="nome_viagem">Nome Viagem</string>
    <string name="dados_do_passageiro">Dados do Passageiro</string>
    <string name="mala">Mala</string>
    <string name="ver_passageiro">Ver Passageiro</string>
    <string name="ver_bilhete">Ver Bilhete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_passageiro">Nome Passageiro</string>
    <string name="g_nero">Género</string>
    <string name="idade">Idade</string>
    <string name="dados_passageiro">Dados Passageiro</string>
    <string name="idadeVerTudo">Idade</string>
</resources>