<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNomeViagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nome_viagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPassageiros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/passageiros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeViagem" />

    <TextView
        android:id="@+id/textViewRoupas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/roupas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassageiros" />

    <TextView
        android:id="@+id/textViewCalcado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calcado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRoupas" />

    <TextView
        android:id="@+id/textViewAcessorios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/acessorios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalcado" />

    <TextView
        android:id="@+id/textViewEletronicos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/eletronicos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAcessorios" />

    <TextView
        android:id="@+id/textViewHigiene"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/higiene"
        app:layout_constraintEnd_toEndOf="@+id/textViewEletronicos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEletronicos"
        app:layout_constraintTop_toBottomOf="@+id/textViewEletronicos" />

    <TextView
        android:id="@+id/textViewClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/class_viagem"
        app:layout_constraintEnd_toEndOf="@+id/textViewHigiene"
        app:layout_constraintStart_toStartOf="@+id/textViewHigiene"
        app:layout_constraintTop_toBottomOf="@+id/textViewHigiene" />

    <TextView
        android:id="@+id/textViewInfoClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info_class"
        app:layout_constraintEnd_toEndOf="@+id/textViewClass"
        app:layout_constraintStart_toStartOf="@+id/textViewClass"
        app:layout_constraintTop_toBottomOf="@+id/textViewClass" />

    <TextView
        android:id="@+id/textViewOrigem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/local_origem"
        app:layout_constraintEnd_toEndOf="@+id/textViewTipoMala"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTipoMala"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoMala" />

    <TextView
        android:id="@+id/textViewData_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data_inicio"
        app:layout_constraintEnd_toEndOf="@+id/textViewOrigem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewOrigem"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrigem" />

    <TextView
        android:id="@+id/textViewData_fim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data_final"
        app:layout_constraintEnd_toEndOf="@+id/textViewData_inicio"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewData_inicio"
        app:layout_constraintTop_toBottomOf="@+id/textViewData_inicio" />

    <TextView
        android:id="@+id/textViewTipoMala"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mala"
        app:layout_constraintEnd_toEndOf="@+id/textViewInfoClass"
        app:layout_constraintStart_toStartOf="@+id/textViewInfoClass"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfoClass" />

</androidx.constraintlayout.widget.ConstraintLayout>